tests/NormalTests/paczka1/small_fuzzy/64784965.err
Error in line 14: 1hY24BsWyjg A739 28,5
